--- a/kippo.cfg.dist
+++ b/kippo.cfg.dist
@@ -199,3 +199,19 @@ interact_port = 5123
 
 #[database_textlog]
 #logfile = kippo-textlog.log
+
+
+# IRC based logging module
+#
+# Logs to an IRC server. The default settings are shown, nick is randomly
+# generated unless specified. Channel can be a list of comma separated channels,
+# or even another nick (which will get PMs).
+#
+# To enable this module, remove the comments below, including the
+# [database_irc] line.
+#[database_irc]
+#server=irc.efnet.org
+#nick=kippobot
+#channel=#kippo-events
+#ssl=false
+#password=
