Since we dont do lists of channels anymore, remove it from the example text

--- a/kippo.cfg.dist
+++ b/kippo.cfg.dist
@@ -204,8 +204,7 @@ interact_port = 5123
 # IRC based logging module
 #
 # Logs to an IRC server. The default settings are shown, nick is randomly
-# generated unless specified. Channel can be a list of comma separated channels,
-# or even another nick (which will get PMs).
+# generated unless specified. Channel can be either a channel or a nick
 #
 # To enable this module, remove the comments below, including the
 # [database_irc] line.
