added use of reported_ssh_port

--- a/kippo.cfg.dist
+++ b/kippo.cfg.dist
@@ -14,6 +14,9 @@
 # (default: 2222)
 ssh_port = 2222
 
+# Source Port to report in logs (useful if you use iptables to forward ports to kippo)
+reported_ssh_port = 22
+
 # Hostname for the honeypot. Displayed by the shell prompt of the virtual
 # environment.
 #
